# horca

./: .gitignore  default.nix  project.cabal  shell.nix
app/: .dir-locals.el  Main.hs
editor/: .dir-locals.el  Main.hs
editor/Game/Horca/UI/Brick/: Editor.hs
interpreter/: .dir-locals.el  Main.hs
src/: .dir-locals.el
src/Game/: Horca.hs
src/Game/Horca/: TickTimer.hs  Types.hs  UI.hs
src/Game/Horca/UI/: BPMEditor.hs  BPMForm.hs
