name: horca
version: 0.1.0
license: BSD3
cabal-version: >= 1.18
build-type: Simple

library
    default-language: Haskell2010
    exposed-modules:
      Game.Horca,
      Game.Horca.Types
      Game.Horca.TickTimer
--      Game.Horca.UI
      Game.Horca.UI.BPMForm
    hs-source-dirs: src
    build-depends:
      pretty-show,
      reactive-banana,
      base,
      text,
      vector,
      containers,
      stm,
      async,
      vty,
      brick,
      criterion-measurement,
      microlens,
      microlens-th,
      microlens-platform,
      text-zipper

executable horca
    build-depends:
      horca,
      reactive-banana,
      base,
      stm,
      async,
      vty,
      brick,
      criterion-measurement,
      microlens,
      microlens-th,
      text,
      text-zipper
    main-is: app/Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded
