cabal-version: 2.4

name:horca
version: 0.1.0
license: BSD-3-Clause
build-type: Simple


common text
    build-depends: text
    extensions: OverloadedStrings

library
    default-language: Haskell2010
    exposed-modules:
      Game.Horca,
      Game.Horca.Types
      Game.Horca.TickTimer
    hs-source-dirs: src
    build-depends:
      base,
      text,
      vector,
      containers,
      stm,
      async,
      microlens,
      microlens-th,
      microlens-platform,
      text-zipper

executable horca-editor
    build-depends:
      horca,
      base,
      stm,
      async,
      text,
      text-zipper,
      vty,
      microlens,
      microlens-th,
      brick,
      vector
    hs-source-dirs: editor
    main-is: Main.hs
    other-modules:
      Game.Horca.UI.Brick.Editor
    default-language: Haskell2010
    ghc-options:      -threaded

executable horca-interpreter
    build-depends:
      horca,
      base,
      monoid-subclasses,
      stm,
      reactive-banana
    hs-source-dirs: interpreter
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded
